--- a/Client/package.json
+++ b/Client/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "preview": "vite preview",
     "build": "vite build",
-    "preview": "vite preview"
+    "start": "react-scripts start",
+    "vercel-build": "vite build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -24,6 +26,7 @@
     "react-scroll": "^1.9.3",
     "react-toastify": "^11.0.5",
     "swiper": "^12.0.3",
+    "vercel": "^48.10.9",
     "vite": "^7.1.12"
   },
   "devDependencies": {
